--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,10 +18,12 @@ jobs:
         run: |-
           sudo sysctl -w kernel.apparmor_restrict_unprivileged_unconfined=0
           sudo sysctl -w kernel.apparmor_restrict_unprivileged_userns=0
-          mkdir -p sandbox && chmod 777 sandbox
-          mkdir -p local_files && chmod 777 local_files
-          mkdir -p compilers && chmod 777 compilers
-          mkdir -p libraries && chmod 777 libraries
+          # NOTE: CI does not run as 'ubuntu' user
+          export USER_1000=$(getent passwd 1000 | cut -d: -f1)
+          for dir in backend/.venv sandbox local_files compilers libraries; do
+            mkdir -p "$dir"
+            sudo chown "${USER_1000}:${USER_1000}" "$dir"
+          done
           docker run \
             -v $(pwd):/decomp.me \
             -v $(pwd)/local_files:/local_files \
@@ -42,14 +44,13 @@ jobs:
             -e USE_SANDBOX_JAIL=on \
             -e SANDBOX_DISABLE_PROC=true \
             -e TIMEOUT_SCALE_FACTOR=10 \
-            -e POETRY_VIRTUALENVS_PATH=/backend/virtualenvs \
             decompme_backend \
               -c 'cd /decomp.me/backend && \
-              poetry install --no-root && \
-              poetry run compilers/download.py --compilers-dir ${COMPILER_BASE_PATH} && \
-              poetry run libraries/download.py --libraries-dir ${LIBRARY_BASE_PATH} && \
+              uv sync && \
+              uv run compilers/download.py --compilers-dir ${COMPILER_BASE_PATH} && \
+              uv run libraries/download.py --libraries-dir ${LIBRARY_BASE_PATH} && \
               for r in wine/*.reg; do regedit $r; done && \
-              poetry run python manage.py test'
+              uv run python manage.py test'
 
   backend_test_docker_prod:
     name: backend tests (docker prod container)
@@ -98,7 +99,7 @@ jobs:
             decompme_backend \
               -c '\
               for r in wine/*.reg; do regedit $r; done && \
-              poetry run python manage.py test'
+              uv run python manage.py test'
 
   docker_compose_test:
     name: test docker compose
@@ -191,24 +192,34 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
-      - name: Install poetry
-        run: pipx install poetry
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          version: "latest"
       - name: Setup Python 3.12
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
-          cache: poetry
-          cache-dependency-path: backend/poetry.lock
       - run: |-
           cd backend
-          poetry install --no-root
-          poetry run mypy
+          uv sync
+          uv run mypy
 
-  black:
-    name: black
+  ruff:
+    name: ruff
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
-      - uses: psf/black@stable
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
         with:
-          src: "./backend"
+          version: "latest"
+      - name: Setup Python 3.12
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+      - run: |-
+          cd backend
+          uv sync
+          uv run ruff check .
+          uv run ruff format --check .
