--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -4,92 +4,74 @@ ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
-        ca-certificates \
-        curl \
-        python-is-python3 \
-        python3 \
-        python3-pip \
-        python3.12-dev \
-        python3.12-venv \
-        software-properties-common \
+    ca-certificates \
+    curl \
+    git \
+    python-is-python3 \
+    python3 \
+    python3-pip \
+    python3.12-dev \
+    python3.12-venv \
+    software-properties-common \
     && rm -rf /var/lib/apt/lists/*
 
-RUN curl -sSL https://install.python-poetry.org/ | \
-    POETRY_VERSION=2.2.0 \
-    POETRY_HOME=/etc/poetry \
-    python3.12 -
-
-ENV POETRY_VIRTUALENVS_PATH=/virtualenvs
-
-ENV PATH="${PATH}:/etc/poetry/bin"
-
+RUN curl -LsSf https://astral.sh/uv/install.sh | env UV_INSTALL_DIR="/usr/bin/" sh
 
 FROM base AS nsjail
 
 RUN apt-get update \
     && apt-get install -y --no-install-recommends \
-        autoconf \
-        bison \
-        flex \
-        g++ \
-        gcc \
-        git \
-        libnl-route-3-dev \
-        libprotobuf-dev \
-        libtool \
-        make \
-        pkg-config \
-        protobuf-compiler \
+    autoconf \
+    bison \
+    flex \
+    g++ \
+    gcc \
+    libnl-route-3-dev \
+    libprotobuf-dev \
+    libtool \
+    make \
+    pkg-config \
+    protobuf-compiler \
     && rm -rf /var/lib/apt/lists/*
 
 RUN git clone "https://github.com/google/nsjail" \
-        --recursive --branch 3.4 /nsjail \
+    --recursive --branch 3.4 /nsjail \
     && cd /nsjail \
     && make
 
 
-FROM base AS poetry
-
-COPY pyproject.toml poetry.lock /backend/
-
-WORKDIR /backend
-
-# NOTE: adding "--no-dev" results in "ModuleNotFoundError: No module named 'django_stubs_ext'" error
-RUN poetry install
-
-
-FROM base AS dependencies
+FROM base AS developer
 
 RUN dpkg --add-architecture i386 \
     && add-apt-repository -y ppa:dosemu2/ppa \
     && add-apt-repository -y ppa:stsp-0/dj64 \
     && apt-get update \
     && apt-get install -y -o APT::Immediate-Configure=false --no-install-recommends \
-        binutils-aarch64-linux-gnu \
-        binutils-arm-none-eabi \
-        binutils-djgpp \
-        binutils-mingw-w64-i686 \
-        binutils-mips-linux-gnu \
-        binutils-powerpc-linux-gnu \
-        binutils-sh-elf \
-        cpp \
-        dj64 \
-        dos2unix \
-        dosemu2 \
-        gcc-mips-linux-gnu \
-        iptables \
-        libarchive-tools \
-        libc6-dev-i386 \
-        libdevmapper1.02.1 \
-        libgpgme11 \
-        libnl-route-3-200 \
-        libprotobuf-dev \
-        libtinfo6 \
-        netcat-traditional \
-        unzip \
-        wget \
-        wine \
-        wine32:i386 \
+    binutils-aarch64-linux-gnu \
+    binutils-arm-none-eabi \
+    binutils-djgpp \
+    binutils-mingw-w64-i686 \
+    binutils-mips-linux-gnu \
+    binutils-powerpc-linux-gnu \
+    binutils-sh-elf \
+    cpp \
+    dj64 \
+    dos2unix \
+    dosemu2 \
+    gcc-mips-linux-gnu \
+    iptables \
+    libarchive-tools \
+    libc6-dev-i386 \
+    libdevmapper1.02.1 \
+    libgpgme11 \
+    libnl-route-3-200 \
+    libprotobuf-dev \
+    libtinfo6 \
+    netcat-traditional \
+    unzip \
+    wget \
+    wine \
+    wine32:i386 \
     && rm -rf /var/lib/apt/lists/*
 
 RUN wget http://security.ubuntu.com/ubuntu/pool/universe/n/ncurses/libtinfo5_6.3-2ubuntu0.1_amd64.deb \
@@ -123,13 +105,11 @@ RUN mkdir -p /etc/fonts
 
 ENV WINEPREFIX=/tmp/wine
 
-# Ensure /sandbox, wine, and virtualenv dirs have correct ownership
+# Ensure /sandbox and wine dirs have correct ownership
 RUN mkdir -p /sandbox \
     && chown -R ubuntu:ubuntu /sandbox \
     && mkdir -p "${WINEPREFIX}" \
-    && chown ubuntu:ubuntu "${WINEPREFIX}" \
-    && mkdir /virtualenvs \
-    && chown -R ubuntu:ubuntu /virtualenvs
+    && chown ubuntu:ubuntu "${WINEPREFIX}"
 
 # Switch to non-root user
 USER ubuntu
@@ -137,15 +117,27 @@ USER ubuntu
 # Initialize wine files to /home/ubuntu/.wine
 RUN wineboot --init
 
-COPY wine /wine
+WORKDIR /backend
 
 
-FROM dependencies AS deployment
+FROM base AS uv-install
 
 WORKDIR /backend
 
-COPY --from=poetry /virtualenvs /virtualenvs
-COPY pyproject.toml poetry.lock /backend/
+RUN chown -R ubuntu:ubuntu /backend
+
+COPY pyproject.toml uv.lock /backend/
+
+USER ubuntu
+
+# Install dependencies to /backend/.venv
+RUN uv sync --locked
+
+
+FROM developer AS deployment
+
+COPY --from=uv-install /backend/.venv /backend/.venv
+COPY pyproject.toml uv.lock /backend/
 
 COPY manage.py /backend
 COPY housekeeping.py /backend
