--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -230,7 +230,7 @@ jobs:
           python-version: "3.12"
       - run: |-
           cd cromper
-          uv sync
+          uv sync --all-extras
           uv run mypy .
           uv run ruff check
           uv run ruff format --check
