--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -24,12 +24,10 @@ dependencies = [
     "django-cleanup>=9.0.0",
     "sentry-sdk>=2.19.0",
     "django-session-timeout>=0.1.0",
-    "django>=5.1.3",
     "requests>=2.32.3",
     "setuptools>=75.6.0",
     "debugpy>=1.8.13",
     "gunicorn>=23.0.0",
-    "django-stubs[compatible-mypy]>=5.2.5",
 ]
 
 [dependency-groups]
@@ -37,7 +35,7 @@ dev = [
     "ruff>=0.8.0",
     "usort>=1.0.8",
     "django-stubs-ext>=5.1.1",
-    "django-stubs>=5.1.1",
+    "django-stubs[compatible-mypy]>=5.2.5",
     "djangorestframework-stubs>=3.15.1",
     "types-requests>=2.32.0.20241016",
     "parameterized>=0.9.0",
@@ -56,7 +54,7 @@ allow-direct-references = true
 packages = ["coreapp", "decompme"]
 
 [tool.mypy]
-disable_error_code = "var-annotated, import-untyped"
+disable_error_code = ["var-annotated", "import-untyped"]
 plugins = ["mypy_django_plugin.main"]
 
 [tool.django-stubs]
