nuke frontend changes

--- a/frontend/biome.json
+++ b/frontend/biome.json
@@ -1,5 +1,5 @@
 {
-    "$schema": "https://biomejs.dev/schemas/2.0.6/schema.json",
+    "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
     "vcs": {
         "enabled": false,
         "clientKind": "git",
@@ -7,29 +7,23 @@
     },
     "files": {
         "ignoreUnknown": false,
-        "includes": ["**", "!**/.next", "!**/cache", "!**/node_modules"]
+        "ignore": [".next", "cache", "node_modules"]
     },
     "formatter": {
         "enabled": true,
         "indentStyle": "space",
         "indentWidth": 4
     },
-    "assist": { "actions": { "source": { "organizeImports": "off" } } },
+    "organizeImports": {
+        "enabled": false
+    },
     "linter": {
         "enabled": true,
         "rules": {
             "recommended": true,
             "style": {
                 "noUselessElse": "off",
-                "noParameterAssign": "off",
-                "useAsConstAssertion": "error",
-                "useDefaultParameterLast": "error",
-                "useEnumInitializers": "error",
-                "useSelfClosingElements": "error",
-                "useSingleVarDeclarator": "error",
-                "noUnusedTemplateLiteral": "error",
-                "useNumberNamespace": "error",
-                "noInferrableTypes": "error"
+                "noParameterAssign": "off"
             },
             "a11y": {
                 "useValidAnchor": "off",
