--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -67,3 +67,4 @@ services:
       - ./nginx/development.conf:/etc/nginx/conf.d/default.conf:ro
       - ./frontend/down.html:/var/www/down.html:ro
       - ./backend/media:/media
+    restart: unless-stopped
