get site somewhat working locally

--- a/nginx/development.conf
+++ b/nginx/development.conf
@@ -13,7 +13,7 @@ server {
     location / {
         try_files $uri @proxy_frontend;
     }
-    location ~ ^/api/(compiler|compilers) {
+    location ~ ^/api/(compiler|platform) {
         # drop /api from url
         rewrite ^/api/(.*)$ /$1 break;
         try_files $uri @proxy_cromper;
