--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -83,7 +83,7 @@ server {
         try_files /dummy.html @proxy_frontend;
     }
 
-    location ~ ^/api/(compiler|compilers) {
+    location ~ ^/api/(compiler|platform) {
         # drop /api from url
         rewrite ^/api/(.*)$ /$1 break;
         try_files $uri @proxy_cromper;
