Band-aid fix for /platform

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -54,6 +54,7 @@ services:
     environment:
       API_BASE: /api
       INTERNAL_API_BASE: http://backend:8000/api
+      INTERNAL_CROMPER_BASE: http://cromper:8888
     ports:
       - "8080:8080"
     volumes:
