Add Xbox 360 platform

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -136,6 +136,7 @@ ARG ENABLE_PSP_SUPPORT
 ARG ENABLE_SATURN_SUPPORT
 ARG ENABLE_SWITCH_SUPPORT
 ARG ENABLE_WIN32_SUPPORT
+ARG ENABLE_XBOX360_SUPPORT
 
 ENV ENABLE_DREAMCAST_SUPPORT=${ENABLE_DREAMCAST_SUPPORT} \
     ENABLE_GBA_SUPPORT=${ENABLE_GBA_SUPPORT} \
@@ -150,7 +151,8 @@ ENV ENABLE_DREAMCAST_SUPPORT=${ENABLE_DREAMCAST_SUPPORT} \
     ENABLE_PSP_SUPPORT=${ENABLE_PSP_SUPPORT} \
     ENABLE_SATURN_SUPPORT=${ENABLE_SATURN_SUPPORT} \
     ENABLE_SWITCH_SUPPORT=${ENABLE_SWITCH_SUPPORT} \
-    ENABLE_WIN32_SUPPORT=${ENABLE_WIN32_SUPPORT}
+    ENABLE_WIN32_SUPPORT=${ENABLE_WIN32_SUPPORT} \
+    ENABLE_XBOX360_SUPPORT=${ENABLE_XBOX360_SUPPORT}
 
 ENTRYPOINT ["/backend/docker_entrypoint.sh"]
 
