Don't forward /apiXYZ to backend

--- a/nginx/development.conf
+++ b/nginx/development.conf
@@ -14,7 +14,7 @@ server {
         try_files $uri @proxy_frontend;
     }
 
-    location /api {
+    location ~ ^/api(/.*)?$ {
         try_files $uri @proxy_api;
     }
     location /admin {
