--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -83,7 +83,7 @@ server {
         try_files /dummy.html @proxy_frontend;
     }
 
-    location /api {
+    location ~ ^/api(/.*)?$ {
         try_files /dummy.html @proxy_api;
     }
 
