nginx logging as json (#1733)
* nginx logging as json

* string the values that could be - when empty

--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -11,13 +11,12 @@ server {
     }
 }
 
-log_format latency_log '$http_cf_connecting_ip - [$remote_addr | $time_local] '
-                       '"$request" $status $body_bytes_sent '
-                       '"$http_referer" "$http_user_agent" '
-                       'rt=$request_time '
-                       'urt=$upstream_response_time '
-                       'uht=$upstream_header_time '
-                       'uct=$upstream_connect_time';
+log_format latency_log escape=json
+    '{ "cf_ip":"$http_cf_connecting_ip", "remote":"$remote_addr", '
+    '"time":"$time_iso8601", "request":"$request", "status":$status, '
+    '"bytes":$body_bytes_sent, "referer":"$http_referer", "agent":"$http_user_agent", '
+    '"rt":$request_time, "urt":"$upstream_response_time", '
+    '"uht":"$upstream_header_time", "uct":"$upstream_connect_time" }';
 
 # {{HTTPS_SERVER_BLOCK_START}}
 server {
