--- a/cromper/.env
+++ b/cromper/.env
@@ -5,8 +5,8 @@ CROMPER_DEBUG=true
 # Copy relevant settings from Django backend
 USE_SANDBOX_JAIL=true
 SANDBOX_DISABLE_PROC=true
-# COMPILER_BASE_PATH=/home/ethteck/repos/decomp.me/cromper/compilers
-# LIBRARY_BASE_PATH=/home/ethteck/repos/decomp.me/cromper/libraries
+COMPILER_BASE_PATH=/home/ethteck/repos/decomp.me/cromper/compilers
+LIBRARY_BASE_PATH=/home/ethteck/repos/decomp.me/cromper/libraries
 COMPILATION_TIMEOUT_SECONDS=10
 ASSEMBLY_TIMEOUT_SECONDS=3
 WINEPREFIX=/tmp/wine
