--- a/cromper/pyproject.toml
+++ b/cromper/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "python-dotenv>=1.0.0",
     "m2c @ git+https://github.com/matt-kempster/m2c.git",
     "asm-differ @ git+https://github.com/simonlindholm/asm-differ.git",
+    "pyyaml>=6.0.3",
 ]
 
 [project.optional-dependencies]
