Tweak nginx config

--- a/nginx/development.conf
+++ b/nginx/development.conf
@@ -1,4 +1,4 @@
-# nginx config file used by docker
+include /etc/nginx/conf.d/geo.conf;
 
 server {
     listen 80;
@@ -9,6 +9,10 @@ server {
     root /var/www/;
 
     server_name decomp.local www.decomp.local;
+
+    if ($is_denied) {
+        return 403;
+    }
 
     location / {
         try_files $uri @proxy_frontend;
