--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -1,3 +1,5 @@
+include /etc/nginx/conf.d/geo.conf;
+
 server {
     listen 80;
     server_name decomp.me www.decomp.me;
@@ -12,7 +14,7 @@ server {
 }
 
 log_format latency_log escape=json
-    '{ "cf_ip":"$http_cf_connecting_ip", "remote":"$remote_addr", '
+    '{ "cf_edge_ip":"$cf_edge_ip", "remote":"$remote_addr", '
     '"time":"$time_iso8601", "request":"$request", "status":$status, '
     '"bytes":$body_bytes_sent, "referer":"$http_referer", "agent":"$http_user_agent", '
     '"rt":$request_time, "urt":"$upstream_response_time", '
@@ -51,6 +53,11 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
+    # Cloudflare
+    set $cf_edge_ip $remote_addr;
+    real_ip_header CF-Connecting-IP;
+    real_ip_recursive on;
+
     # Compression
     gzip on;
     gzip_static on;
@@ -77,6 +84,10 @@ server {
         text/css
         text/plain
         text/xml;
+
+    if ($is_denied) {
+        return 403;
+    }
 
     location / {
         try_files /dummy.html @proxy_frontend;
