--- a/nginx/production.conf
+++ b/nginx/production.conf
@@ -14,7 +14,7 @@ server {
 }
 
 log_format latency_log escape=json
-    '{ "cf_edge_ip":"$cf_edge_ip", "remote":"$remote_addr", '
+    '{ "cf_edge_ip":"$realip_remote_addr", "remote":"$remote_addr", '
     '"time":"$time_iso8601", "request":"$request", "status":$status, '
     '"bytes":$body_bytes_sent, "referer":"$http_referer", "agent":"$http_user_agent", '
     '"rt":$request_time, "urt":"$upstream_response_time", '
@@ -52,11 +52,6 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/decomp.me/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-    # Cloudflare
-    set $cf_edge_ip $remote_addr;
-    real_ip_header CF-Connecting-IP;
-    real_ip_recursive on;
 
     # Compression
     gzip on;
