--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,40 +16,12 @@ jobs:
           docker build backend -t decompme_backend
       - name: Run tests
         run: |-
-          sudo sysctl -w kernel.apparmor_restrict_unprivileged_unconfined=0
-          sudo sysctl -w kernel.apparmor_restrict_unprivileged_userns=0
-          # NOTE: CI does not run as 'ubuntu' user
-          export USER_1000=$(getent passwd 1000 | cut -d: -f1)
-          for dir in backend/.venv sandbox local_files compilers libraries; do
-            mkdir -p "$dir"
-            sudo chown "${USER_1000}:${USER_1000}" "$dir"
-          done
           docker run \
             -v $(pwd):/decomp.me \
-            -v $(pwd)/local_files:/local_files \
-            -v $(pwd)/compilers:/compilers \
-            -v $(pwd)/libraries:/libraries \
-            --security-opt apparmor=unconfined \
-            --security-opt seccomp=unconfined \
-            --cap-drop all \
-            --cap-add setuid \
-            --cap-add setgid \
-            --cap-add setfcap \
-            --tmpfs /sandbox/tmp:exec,uid=1000,gid=1000,size=64M,mode=0700 \
             --entrypoint /bin/bash \
-            -e COMPILER_BASE_PATH=/compilers \
-            -e LIBRARY_BASE_PATH=/libraries \
-            -e WINEPREFIX=/tmp/wine \
-            -e LOCAL_FILE_DIR=/local_files \
-            -e USE_SANDBOX_JAIL=on \
-            -e SANDBOX_DISABLE_PROC=true \
-            -e TIMEOUT_SCALE_FACTOR=10 \
             decompme_backend \
               -c 'cd /decomp.me/backend && \
               uv sync && \
-              uv run compilers/download.py --compilers-dir ${COMPILER_BASE_PATH} && \
-              uv run libraries/download.py --libraries-dir ${LIBRARY_BASE_PATH} && \
-              for r in wine/*.reg; do regedit $r; done && \
               uv run python manage.py test'
 
   backend_test_docker_prod:
@@ -61,44 +33,18 @@ jobs:
       - name: Build decompme_backend image
         run: |-
           docker build backend --target prod -t decompme_backend
-      - name: Fetch compilers and libraries
         run: |-
-          python3 -m pip install requests
-          python3 cromper/compilers/download.py
-          python3 cromper/libraries/download.py
-          export USER_1000=$(getent passwd 1000 | cut -d: -f1)
-          sudo chown -R ${USER_1000}:${USER_1000} cromper/compilers
-          sudo chown -R ${USER_1000}:${USER_1000} cromper/libraries
-      - name: Run tests
-        run: |-
-          sudo sysctl -w kernel.apparmor_restrict_unprivileged_unconfined=0
-          sudo sysctl -w kernel.apparmor_restrict_unprivileged_userns=0
-          export USER_1000=$(getent passwd 1000 | cut -d: -f1)
           mkdir -p local_files && sudo chown ${USER_1000}:${USER_1000} local_files
           docker run \
             -v $(pwd)/local_files:/local_files \
-            -v $(pwd)/cromper/compilers:/compilers \
-            -v $(pwd)/cromper/libraries:/libraries \
-            --security-opt apparmor=unconfined \
-            --security-opt seccomp=unconfined \
-            --cap-drop all \
-            --cap-add setuid \
-            --cap-add setgid \
-            --cap-add setfcap \
-            --tmpfs /sandbox/tmp:exec,uid=1000,gid=1000,size=64M,mode=0700 \
             --entrypoint /bin/bash \
             -e LOCAL_FILE_DIR=/local_files \
-            -e COMPILER_BASE_PATH=/compilers \
-            -e LIBRARY_BASE_PATH=/libraries \
-            -e USE_SANDBOX_JAIL=on \
-            -e SANDBOX_DISABLE_PROC=true \
-            -e TIMEOUT_SCALE_FACTOR=10 \
             -e DATABASE_URL=sqlite:///:memory: \
             -e SECRET_KEY=secret-key-secret-key-secret-key-secret-key-secret-key-secret-key \
             decompme_backend \
-              -c '\
-              for r in wine/*.reg; do regedit $r; done && \
-              uv run python manage.py test'
+              -c 'uv run python manage.py test'
+
+  # TODO: run cromper unit tests
 
   docker_compose_test:
     name: test docker compose
@@ -113,9 +59,6 @@ jobs:
           python3 -m pip install requests
           python3 cromper/compilers/download.py
           python3 cromper/libraries/download.py
-          # Copy to cromper directories
-          cp -r cromper/compilers cromper/
-          cp -r cromper/libraries cromper/
           export USER_1000=$(getent passwd 1000 | cut -d: -f1)
           sudo chown -R ${USER_1000}:${USER_1000} cromper/compilers
           sudo chown -R ${USER_1000}:${USER_1000} cromper/libraries
@@ -167,6 +110,7 @@ jobs:
         run: |
           curl --silent http://localhost:8080/ | head -c 256
           curl --silent http://localhost:8000/api/ | jq
+          curl --silent http://localhost:8000/api/platform | jq
 
       - name: Shut everything down
         run: |
