added missing ENABLE_WIIU_SUPPORT arg and env var to backend Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -126,6 +126,7 @@ FROM dependencies AS dev
 ARG ENABLE_DREAMCAST_SUPPORT
 ARG ENABLE_GBA_SUPPORT
 ARG ENABLE_GC_WII_SUPPORT
+ARG ENABLE_WIIU_SUPPORT
 ARG ENABLE_MACOSX_SUPPORT
 ARG ENABLE_MSDOS_SUPPORT
 ARG ENABLE_N3DS_SUPPORT
@@ -141,6 +142,7 @@ ARG ENABLE_WIN32_SUPPORT
 ENV ENABLE_DREAMCAST_SUPPORT=${ENABLE_DREAMCAST_SUPPORT} \
     ENABLE_GBA_SUPPORT=${ENABLE_GBA_SUPPORT} \
     ENABLE_GC_WII_SUPPORT=${ENABLE_GC_WII_SUPPORT} \
+    ENABLE_WIIU_SUPPORT=${ENABLE_WIIU_SUPPORT} \
     ENABLE_MACOSX_SUPPORT=${ENABLE_MACOSX_SUPPORT} \
     ENABLE_MSDOS_SUPPORT=${ENABLE_MSDOS_SUPPORT} \
     ENABLE_N3DS_SUPPORT=${ENABLE_N3DS_SUPPORT} \
