--- a/backend/compilers/compilers.linux.yaml
+++ b/backend/compilers/compilers.linux.yaml
@@ -230,6 +230,10 @@ win32:
   - msvc8.0
   - msvc8.0p
 
+xbox360:
+  - msvc_ppc_14.00.2110
+  - msvc_ppc_16.00.11886.00
+
 android_x86:
   - ndk-r8e-gcc-4.4.3
   - ndk-r8e-gcc-4.7
