--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,40 +9,40 @@ license = {text = "MIT"}
 requires-python = ">=3.10"
 dependencies = [
     "django-cors-headers>=4.6.0",
-    "django-environ>=0.11.2",
+    "django-environ>=0.13.0",
     "django-filter>=24.3",
     "djangorestframework>=3.15.2",
     "psycopg2-binary>=2.9.10",
     "jwt>=1.3.1",
     "PyGithub>=2.5.0",
     "drf-extensions>=0.7.1",
-    "tzdata==2024.2",
-    "Pillow==11.0",
+    "tzdata==2025.3",
+    "Pillow==12.1.1",
     "html-json-forms>=1.1.1",
     "django-resized>=1.0.3",
     "django-cleanup>=9.0.0",
     "m2c @ git+https://github.com/matt-kempster/m2c.git",
     "asm-differ @ git+https://github.com/simonlindholm/asm-differ.git",
-    "sentry-sdk>=2.19.0",
+    "sentry-sdk>=2.53.0",
     "django-session-timeout>=0.1.0",
-    "django>=5.1.3",
+    "django==5.2.11",
     "requests>=2.32.3",
-    "setuptools>=75.6.0",
-    "debugpy>=1.8.13",
-    "gunicorn>=23.0.0",
+    "setuptools>=82.0.0",
+    "debugpy>=1.8.20",
+    "gunicorn>=25.1.0",
 ]
 
 [dependency-groups]
 dev = [
-    "ruff>=0.8.0",
-    "usort>=1.0.8",
-    "django-stubs-ext>=5.1.1",
-    "django-stubs>=5.1.1",
-    "djangorestframework-stubs>=3.15.1",
-    "types-requests>=2.32.0.20241016",
+    "ruff>=0.15.2",
+    "usort>=1.1.3",
+    "django-stubs-ext>=5.2.9",
+    "django-stubs>=5.2.9",
+    "djangorestframework-stubs>=3.16.8",
+    "types-requests>=2.32.4.20260107",
     "parameterized>=0.9.0",
-    "mypy>=1.13.0",
-    "responses==0.25.3",
+    "mypy>=1.19.1",
+    "responses==0.26.0",
 ]
 
 [build-system]
