Add few more armcc 4.0/4.1 compilers

--- a/backend/compilers/compilers.linux.yaml
+++ b/backend/compilers/compilers.linux.yaml
@@ -61,9 +61,12 @@ n64:
 n3ds:
   - armcc_40_771
   - armcc_40_821
+  - armcc_40_865
+  - armcc_40_902
   - armcc_41_561
   - armcc_41_713
   - armcc_41_791
+  - armcc_41_844
   - armcc_41_894
   - armcc_41_921
   - armcc_41_1049
